--- a/frontend/src/manifest.json
+++ b/frontend/src/manifest.json
@@ -2,18 +2,17 @@
   "manifest_version": 3,
   "name": "Youtube Summary Chrome Extension",
   "description": "A chrome extension that utilizes gpt-4o mini to summarize youtube videos",
+  "permissions": ["activeTab", "tabs", "scripting"],
   "options_page": "options.html",
   "background": { "service_worker": "background.bundle.js" },
   "action": {
     "default_popup": "popup.html",
     "default_icon": "icon-34.png"
   },
-  "icons": {
-    "128": "icon-128.png"
-  },
+
   "content_scripts": [
     {
-      "matches": ["http://*/*", "https://www.youtube.com/*"],
+      "matches": ["*://*.youtube.com/*"],
       "js": ["contentScript.bundle.js"],
       "css": ["content.styles.css"]
     }
