--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "description": "",
   "dependencies": {
     "dotenv": "^16.4.5",
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "openai": "^4.53.0",
+    "tiktoken": "^1.0.15",
+    "youtube-transcript": "^1.2.1"
   }
 }
