--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,8 @@
     "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.2.1",
+    "speak-tts": "^2.0.8",
     "tailwindcss": "^3.4.6"
   },
   "devDependencies": {
